@@ -1,6 +1,18 @@
 package com.playgroundideas.playgroundideas;
 
+import android.support.test.espresso.ViewInteraction;
+import android.support.test.espresso.matcher.BoundedMatcher;
+import android.support.v7.widget.Toolbar;
+
 import com.playgroundideas.playgroundideas.model.User;
+
+import org.hamcrest.Description;
+import org.hamcrest.Matcher;
+
+import static android.support.test.espresso.Espresso.onView;
+import static android.support.test.espresso.assertion.ViewAssertions.matches;
+import static android.support.test.espresso.matcher.ViewMatchers.isAssignableFrom;
+import static org.hamcrest.core.Is.is;
 
 /**
  * Created by Ferdinand on 14/09/2017.
@@ -9,7 +21,24 @@ import com.playgroundideas.playgroundideas.model.User;
 public class TestUtil {
 
     static User createUser(long id) {
-        User user = new User(new Long(id), "Hans", "Smith", "hans.smith@gmail.com", "0416777888");
+        User user = new User(Long.valueOf(id), "Hans", "Smith", "hans.smith@gmail.com", "0416777888");
         return user;
+    }
+
+    static ViewInteraction matchToolbarTitle(CharSequence title) {
+        return onView(isAssignableFrom(Toolbar.class))
+                .check(matches(withToolbarTitle(is(title))));
+    }
+
+    private static Matcher<Object> withToolbarTitle(final Matcher<CharSequence> textMatcher) {
+        return new BoundedMatcher<Object, Toolbar>(Toolbar.class) {
+            @Override public boolean matchesSafely(Toolbar toolbar) {
+                return textMatcher.matches(toolbar.getTitle());
+            }
+            @Override public void describeTo(Description description) {
+                description.appendText("with toolbar title: ");
+                textMatcher.describeTo(description);
+            }
+        };
     }
 }
